# ardent-comfy

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
js/: clip_encode_positive_prompt_only.js  show_text.js
nodes/: filename_prefix_formatter.py  format_filename_prefix_by_date.py
py/: base_node.py  clip_encode_positive_prompt_only.py  format_filename_prefix_by_date.py  show_text.py
