[project]
name = "ardent-nodes-comfyui"
description = "Show Text, Filename Prefix By Date, ..."
version = "0.2.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/ardentillumina/ardent-comfy"

[tool.comfy]
PublisherId = "ardentillumina"
DisplayName = "Ardent-Nodes-ComfyUI"
