[project]
name = "ardent-nodes-comfyui"
description = "Show Text; Filename Prefix By Date; Positive Only (CLIP Encode Prompt); ..."
version = "0.3.3"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/ardentillumina/ardent-comfy"

[tool.comfy]
PublisherId = "ardentillumina"
DisplayName = "Ardent-Nodes-ComfyUI"
